Add rich match recap data pipeline